--- a/ProyectoPOO1/src/main/java/aplicacion/Consulta1.form
+++ b/ProyectoPOO1/src/main/java/aplicacion/Consulta1.form
@@ -222,7 +222,7 @@
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
               <TableColumnModel selectionModel="0">
                 <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
-                  <Title value="Escuela o &#xc1;rea"/>
+                  <Title/>
                   <Editor/>
                   <Renderer/>
                 </Column>
@@ -266,7 +266,7 @@
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
               <TableColumnModel selectionModel="0">
                 <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
-                  <Title value="Escuela o &#xc1;rea"/>
+                  <Title/>
                   <Editor/>
                   <Renderer/>
                 </Column>
