--- a/ProyectoPOO1/src/main/java/aplicacion/Cursos.form
+++ b/ProyectoPOO1/src/main/java/aplicacion/Cursos.form
@@ -119,7 +119,7 @@
                           <Component id="comBxHorasLectivas" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="jLabel6" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace pref="43" max="32767" attributes="0"/>
+                      <EmptySpace pref="40" max="32767" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="btnGuardarCurso" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="btnLimpiarCurso" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -343,6 +343,9 @@
     </Component>
     <Component class="javax.swing.JComboBox" name="cmbCodigoCursoParaEliminar">
       <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Tahoma" size="14" style="0"/>
+        </Property>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
           <StringArray count="4">
             <StringItem index="0" value="Item 1"/>
